MyUoWM-App/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-cs-ingress
  namespace: my-cs
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - my.cs.uowm.gr
    secretName: my-cs-tls-secret
  rules:
  - host: my.cs.uowm.gr
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: my-cs-balancer
              port:
                number: 80
